<resources>
    <string name="app_name">hoon`s test app</string>
    <string name="main_send">Send</string>
    <string name="relative_title">Title</string>
    <string name="relative_prev">PREV</string>
    <string name="relative_next">NEXT</string>
    <string name="relative_close">CLOSE</string>
    <string name="relative_save">SAVE</string>
    <string name="relative_send">SEND</string>

    <!-- TabLayoutTest -->
    <string name="tlTest_tabA">tab page A</string>
    <string name="tlTest_tabB">tab page B</string>
    <string name="tlTest_tabC">tab page C</string>

    <!-- ViewPagerTestActivity -->
    <string name="vpTest_tab1">tab page 1</string>
</resources>