<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout_test.RelativeLayoutTestActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relative_title"
        android:textSize="30dp"
        android:gravity="center"
        android:background="#CCCCCC" />

    <TextView
        android:id="@+id/tv_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:text="@string/relative_prev"
        android:padding="8dp"
        android:layout_margin="4dp"
        android:background="#CCCCCC" />

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tv_prev"
        android:layout_below="@+id/tv_title"
        android:text="@string/relative_next"
        android:padding="8dp"
        android:layout_margin="4dp"
        android:background="#CCCCCC" />


    <TextView
        android:id="@+id/tv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tv_title"
        android:text="@string/relative_close"
        android:padding="8dp"
        android:layout_margin="4dp"
        android:background="#CCCCCC" />

    <ImageView
        android:id="@+id/iv_relative"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:background="#4CAF50" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toEndOf="@id/iv_relative"
        android:layout_alignTop="@id/iv_relative"
        android:orientation="vertical"
        android:paddingLeft="5dp">

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:padding="12dp"
            android:background="#CCCCCC"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:padding="12dp"
            android:background="#CCCCCC"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/tv_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:padding="12dp"
            android:background="#CCCCCC"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/relative_send" />

</RelativeLayout>